Remove online toggles from activity audit
